--- a/src/pl/fxml/TechnicianView.fxml
+++ b/src/pl/fxml/TechnicianView.fxml
@@ -1,25 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="423.0" prefWidth="770.0" styleClass="base-background" stylesheets="@../css/MainStyle.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.controllers.TechnicianViewController">
+<AnchorPane onMouseMoved="#refresh" prefHeight="423.0" prefWidth="770.0" styleClass="base-background" stylesheets="@../css/MainStyle.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.controllers.TechnicianViewController">
    <children>
       <TableView fx:id="projectTableView" layoutX="14.0" layoutY="52.0" prefHeight="349.0" prefWidth="549.0" stylesheets="@../css/MainStyle.css" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="210.0" AnchorPane.topAnchor="50.0">
         <columns>
-          <TableColumn minWidth="150.0" prefWidth="150.0" text="Customer Name" />
-          <TableColumn minWidth="150.0" prefWidth="150.0" text="Customer Location" />
-            <TableColumn maxWidth="3000.0" minWidth="80.0" text="Start Date" />
-            <TableColumn maxWidth="3000.0" minWidth="80.0" text="End Date" />
-            <TableColumn maxWidth="2000.0" minWidth="90.0" prefWidth="90.0" text="Approved" />
+          <TableColumn fx:id="colCustomerName" minWidth="150.0" prefWidth="150.0" text="Customer Name" />
+          <TableColumn fx:id="colCustomerLocation" minWidth="150.0" prefWidth="150.0" text="Customer Location" />
+            <TableColumn fx:id="colStartDate" maxWidth="3000.0" minWidth="80.0" text="Start Date" />
+            <TableColumn fx:id="colEndDate" maxWidth="3000.0" minWidth="80.0" text="End Date" />
+            <TableColumn fx:id="colApproved" maxWidth="2000.0" minWidth="90.0" prefWidth="90.0" text="Approved" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -67,7 +61,7 @@
          </styleClass>
       </Button>
       <TextField fx:id="searchField" focusTraversable="false" layoutX="579.0" layoutY="52.0" onKeyPressed="#searchFieldKeyPressed" AnchorPane.rightAnchor="45.0" />
-      <Button fx:id="searchBtn" focusTraversable="false" layoutX="731.0" layoutY="52.0" mnemonicParsing="false" onAction="#createProjectPressed" prefHeight="25.0" prefWidth="25.0" text="?" AnchorPane.rightAnchor="15.0" />
+      <Button fx:id="btnSearch" focusTraversable="false" layoutX="731.0" layoutY="52.0" mnemonicParsing="false" onAction="#createProjectPressed" prefHeight="25.0" prefWidth="25.0" text="?" AnchorPane.rightAnchor="15.0" />
       <HBox alignment="CENTER_LEFT" layoutY="-1.0" prefHeight="34.0" prefWidth="528.0" styleClass="project-container" stylesheets="@../css/MainStyle.css" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="300.0">
          <children>
             <Button fx:id="allProjectsBtn" mnemonicParsing="false" onAction="#allProjectsBtnPressed" prefHeight="25.0" prefWidth="115.0" stylesheets="@../css/MainStyle.css" text="All Projects">
