--- a/src/pl/fxml/ProjectView.fxml
+++ b/src/pl/fxml/ProjectView.fxml
@@ -3,18 +3,21 @@
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="423.0" prefWidth="770.0" styleClass="base-background" stylesheets="@../css/MainStyle.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.controllers.ProjectViewController">
+<AnchorPane prefHeight="476.0" prefWidth="1120.0" styleClass="base-background" stylesheets="@../css/MainStyle.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.controllers.ProjectViewController">
     <children>
         <HBox alignment="CENTER_LEFT" layoutY="-1.0" prefHeight="34.0" prefWidth="528.0" styleClass="project-container" stylesheets="@../css/MainStyle.css" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="0.0">
             <children>
@@ -57,8 +60,8 @@
                 <Button fx:id="btnClose" mnemonicParsing="false" onAction="#btnClosePressed" styleClass="negative-button" stylesheets="@../css/MainStyle.css" text="X" />
             </children>
         </HBox>
-      <TextArea fx:id="txaNotes" layoutX="322.0" layoutY="79.0" prefHeight="327.0" prefWidth="217.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="322.0" AnchorPane.rightAnchor="230.0" AnchorPane.topAnchor="80.0" />
-      <Label layoutX="322.0" layoutY="54.0" prefHeight="25.0" prefWidth="217.0" stylesheets="@../css/MainStyle.css" text="Notes" AnchorPane.leftAnchor="322.0" AnchorPane.rightAnchor="230.0" AnchorPane.topAnchor="54.0">
+      <TextArea fx:id="txaNotes" layoutX="322.0" layoutY="110.0" prefHeight="385.0" prefWidth="568.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="322.0" AnchorPane.rightAnchor="230.0" AnchorPane.topAnchor="110.0" />
+      <Label layoutX="322.0" layoutY="87.0" prefHeight="25.0" prefWidth="217.0" stylesheets="@../css/MainStyle.css" text="Notes" AnchorPane.leftAnchor="322.0" AnchorPane.rightAnchor="230.0" AnchorPane.topAnchor="87.0">
          <styleClass>
             <String fx:value="common-text-colour" />
             <String fx:value="common-text-font" />
@@ -108,18 +111,19 @@
             <String fx:value="common-text-colour" />
             <String fx:value="common-text-font" />
          </styleClass></Button>
-      <Pane layoutX="32.0" layoutY="78.0" prefHeight="148.0" prefWidth="267.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="80.0">
+      <Pane layoutX="30.0" layoutY="111.0" prefHeight="148.0" prefWidth="267.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="111.0">
          <children>
               
-                        <ImageView fx:id="imvPictures" fitHeight="140.0" fitWidth="266.0" layoutX="-1.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true" />
-            <Button fx:id="btnAdd" layoutX="-1.0" layoutY="123.0" mnemonicParsing="false" onAction="#btnAddPressed" stylesheets="@../css/MainStyle.css" text="Add">
+                                    <ImageView fx:id="imvPictures" fitHeight="140.0" fitWidth="266.0" layoutX="1.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true" />
+            <FlowPane fx:id="flowPane" prefHeight="155.0" prefWidth="267.0" />
+            <Button fx:id="btnAdd" layoutX="1.0" layoutY="123.0" mnemonicParsing="false" onAction="#btnAddPressed" stylesheets="@../css/MainStyle.css" text="Add">
                <styleClass>
                   <String fx:value="grey-button" />
                   <String fx:value="common-text-colour" />
                   <String fx:value="common-text-font" />
                </styleClass>
             </Button>
-            <Label layoutY="-26.0" prefHeight="26.0" prefWidth="267.0" stylesheets="@../css/MainStyle.css" text="Pictures">
+            <Label prefHeight="26.0" prefWidth="267.0" stylesheets="@../css/MainStyle.css" text="Pictures">
                <styleClass>
                   <String fx:value="common-text-colour" />
                   <String fx:value="common-text-font" />
@@ -129,7 +133,7 @@
                   <Insets left="5.0" />
                </padding>
             </Label>
-            <Button fx:id="btnRemove" layoutX="209.0" layoutY="123.0" mnemonicParsing="false" onAction="#btnRemovePressed" stylesheets="@../css/MainStyle.css" text="Remove">
+            <Button fx:id="btnRemove" layoutX="205.0" layoutY="124.0" mnemonicParsing="false" onAction="#btnRemovePressed" stylesheets="@../css/MainStyle.css" text="Remove">
                <styleClass>
                   <String fx:value="grey-button" />
                   <String fx:value="common-text-colour" />
@@ -150,8 +154,8 @@
             </Button>
          </children>
       </Pane>
-      <DatePicker fx:id="startDate" layoutX="590.0" layoutY="291.0" onAction="#startDatePressed" prefHeight="26.0" prefWidth="150.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="285.0" />
-      <DatePicker fx:id="endDate" layoutX="589.0" layoutY="338.0" onAction="#endDatePressed" prefHeight="26.0" prefWidth="150.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="335.0" />
+      <DatePicker fx:id="startDate" layoutX="590.0" layoutY="291.0" prefHeight="26.0" prefWidth="150.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="285.0" />
+      <DatePicker fx:id="endDate" layoutX="589.0" layoutY="338.0" prefHeight="26.0" prefWidth="150.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="335.0" />
       <Label layoutX="589.0" layoutY="271.0" prefHeight="17.0" prefWidth="149.0" stylesheets="@../css/MainStyle.css" text="Start Date:" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="265.0">
          <styleClass>
             <String fx:value="common-text-colour" />
@@ -164,5 +168,20 @@
             <String fx:value="common-text-font" />
          </styleClass>
       </Label>
+      <ComboBox fx:id="comboBoxFont" layoutX="384.0" layoutY="51.0" prefHeight="25.0" prefWidth="194.0" AnchorPane.bottomAnchor="434.0" AnchorPane.leftAnchor="384.0" AnchorPane.rightAnchor="542.0" AnchorPane.topAnchor="51.0" />
+      <ComboBox fx:id="comboBoxFontSize" layoutX="646.0" layoutY="50.0" prefHeight="27.0" prefWidth="82.0" AnchorPane.bottomAnchor="433.0" AnchorPane.rightAnchor="392.0" AnchorPane.topAnchor="50.0">
+         <padding>
+            <Insets left="20.0" />
+         </padding></ComboBox>
+      <CheckBox fx:id="checkBoxBold" layoutX="748.0" layoutY="56.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="62.0" text="Bold" textFill="WHITE" AnchorPane.bottomAnchor="437.0" AnchorPane.rightAnchor="310.0" AnchorPane.topAnchor="56.0">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></CheckBox>
+      <CheckBox fx:id="checkBoxItalic" layoutX="820.0" layoutY="47.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="71.0" text="Italic" textFill="WHITE" AnchorPane.bottomAnchor="429.0" AnchorPane.rightAnchor="228.66666666666663" AnchorPane.topAnchor="47.0">
+         <font>
+            <Font name="System Italic" size="12.0" />
+         </font></CheckBox>
+      <Label layoutX="590.0" layoutY="50.0" prefHeight="27.0" prefWidth="55.0" text="Font Size" textFill="WHITE" />
+      <Label layoutX="328.0" layoutY="50.0" prefHeight="27.0" prefWidth="55.0" text="Font Style" textFill="WHITE" />
     </children>
 </AnchorPane>
