--- a/src/pl/css/MainStyle.css
+++ b/src/pl/css/MainStyle.css
@@ -16,7 +16,6 @@
 
 .common-text-colour {
     -fx-text-fill: -fx-dirty-white;
-
 }
 
 .common-text-font {
@@ -67,6 +66,7 @@
 
 .project-container {
     -fx-background-color: -fx-dark-grey;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.4), 2, 0, -1, 3);
 }
 
 .back-button {
@@ -85,6 +85,18 @@
 .project-button {
     -fx-background-color: transparent;
 
+}
+.login-button{
+    -fx-background-color: -fx-dark-orange;
+    -fx-text-fill: -fx-dirty-white;
+    -fx-font-size: 16px;
+    -fx-font-weight: bold;
+}
+.login-button:hover{
+    -fx-opacity: 1;
+}
+.control-buttons:hover{
+    -fx-opacity: 1;
 }
 
 .project-button:hover {
