--- a/src/pl/fxml/TechnicianView.fxml
+++ b/src/pl/fxml/TechnicianView.fxml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane onMouseMoved="#refresh" prefHeight="423.0" prefWidth="770.0" styleClass="base-background" stylesheets="@../css/MainStyle.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.controllers.TechnicianViewController">
+<AnchorPane onMouseMoved="#refresh" prefHeight="423.0" prefWidth="770.0" styleClass="base-background" stylesheets="@../css/MainStyle.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.controllers.TechnicianViewController">
    <children>
-      <TableView fx:id="projectTableView" layoutX="14.0" layoutY="52.0" prefHeight="349.0" prefWidth="549.0" stylesheets="@../css/MainStyle.css" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="210.0" AnchorPane.topAnchor="50.0">
+      <TableView fx:id="projectTableView" layoutX="14.0" layoutY="74.0" prefHeight="329.0" prefWidth="550.0" stylesheets="@../css/MainStyle.css" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="205.0" AnchorPane.topAnchor="74.0">
         <columns>
           <TableColumn fx:id="colCustomerName" minWidth="150.0" prefWidth="150.0" text="Customer Name" />
           <TableColumn fx:id="colCustomerLocation" minWidth="150.0" prefWidth="150.0" text="Customer Location" />
@@ -105,6 +111,15 @@
             <Button fx:id="minBtn" focusTraversable="false" mnemonicParsing="false" onAction="#minBtnPressed" text="_" />
             <Button fx:id="maxBtn" focusTraversable="false" mnemonicParsing="false" onAction="#maxBtnBtn" text="[ ]" />
             <Button fx:id="closeBtn" focusTraversable="false" mnemonicParsing="false" onAction="#closeBtnPressed" styleClass="negative-button" stylesheets="@../css/MainStyle.css" text="X" />
+         </children>
+      </HBox>
+      <HBox alignment="CENTER" layoutX="15.0" layoutY="40.0" prefHeight="41.0" prefWidth="545.0">
+         <children>
+            <Button fx:id="BtncNameSearch" minWidth="150.0" mnemonicParsing="false" onAction="#searchForName" text="Customer Name" />
+            <Button fx:id="BtncLocSearch" minWidth="150.0" mnemonicParsing="false" onAction="#searchForLocation" text="Customer Location" />
+            <Button fx:id="BtnStartSearch" minWidth="80.0" mnemonicParsing="false" onAction="#searchForStart" text="Start Date" />
+            <Button fx:id="BtnEndSearch" minWidth="80.0" mnemonicParsing="false" onAction="#searchForEnd" text="End Date" />
+            <Button fx:id="BtnApprovedSearch" minWidth="90.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="83.0" text="Approved" />
          </children>
       </HBox>
    </children>
