Switched to TechnicianView.fxml after login.
Fixed naming issues in TechnicianView.fxml.

--- a/src/pl/fxml/LoginView.fxml
+++ b/src/pl/fxml/LoginView.fxml
@@ -43,14 +43,14 @@
             </Button>
          </children>
       </HBox>
-      <TextField fx:id="txfUsername" focusTraversable="false" layoutX="158.0" layoutY="102.0" prefHeight="34.0" prefWidth="258.0" AnchorPane.leftAnchor="170.0" AnchorPane.rightAnchor="170.0" />
+      <TextField fx:id="txfUsername" layoutX="158.0" layoutY="102.0" prefHeight="34.0" prefWidth="258.0" AnchorPane.leftAnchor="170.0" AnchorPane.rightAnchor="170.0" />
       <Button fx:id="btnLogin" focusTraversable="false" layoutX="232.0" layoutY="251.0" mnemonicParsing="false" onAction="#btnLoginPressed" prefHeight="37.0" prefWidth="136.0" styleClass="login-button" text="Login" />
       <Label layoutX="243.0" layoutY="66.0" styleClass="common-text-colour" text="Username" textAlignment="CENTER">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <PasswordField fx:id="pwfPassword" focusTraversable="false" layoutX="225.0" layoutY="193.0" onKeyPressed="#pwfPasswordKeyPressed" prefHeight="34.0" prefWidth="260.0" AnchorPane.leftAnchor="170.0" AnchorPane.rightAnchor="170.0" />
+      <PasswordField fx:id="pwfPassword" layoutX="225.0" layoutY="193.0" onKeyPressed="#pwfPasswordKeyPressed" prefHeight="34.0" prefWidth="260.0" AnchorPane.leftAnchor="170.0" AnchorPane.rightAnchor="170.0" />
       <Polygon fill="#333333" layoutX="430.0" layoutY="60.0" points="-30.0, -25.599994659423828, 4.20001220703125, -59.9999885559082, -30.0, -59.9999885559082" smooth="false" stroke="TRANSPARENT" strokeType="INSIDE" />
    </children>
 </AnchorPane>
