--- a/src/pl/css/MainStyle.css
+++ b/src/pl/css/MainStyle.css
@@ -9,6 +9,7 @@
     -fx-red: #dc3545;
     -fx-green: #198754;
     -fx-dirty-white: #e9e9e9;
+    -fx-focus-color: transparent;
 }
 
 .base-background {
@@ -30,10 +31,24 @@
 .background {
     -fx-background-color: -fx-dark-orange;
 }
-
+.choice-box{
+    -fx-focus-traversable: false;
+}
+.combo-box{
+    -fx-focus-traversable: false;
+}
+.check-box{
+    -fx-focus-traversable: false;
+}
+.added-pictures:hover{
+    -fx-translate-x: 1.2;
+    -fx-translate-y: 1.2;
+    -fx-translate-z: 1.2;
+}
 .button {
     -fx-background-radius: 0px;
     -fx-border-radius: 0px;
+    -fx-focus-traversable: false;
 }
 
 .button:hover {
