--- a/src/pl/fxml/DrawingView.fxml
+++ b/src/pl/fxml/DrawingView.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.shape.Line?>
@@ -13,6 +14,7 @@
 
 <AnchorPane fx:id="anpMain" prefHeight="600.0" prefWidth="800.0" styleClass="base-background" stylesheets="@../css/MainStyle.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.controllers.DrawingViewController">
    <children>
+      <ImageView fx:id="imvExistingDrawing" fitHeight="543.0" fitWidth="772.0" layoutX="14.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true" />
       <AnchorPane layoutX="14.0" layoutY="40.0" prefHeight="551.0" prefWidth="781.0" style="-fx-border-color: white;" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="50.0" />
       <AnchorPane layoutX="1.0" layoutY="-1.0" prefHeight="34.0" prefWidth="446.0" styleClass="project-container" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="0.0">
          <children>
